--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -54,5 +54,22 @@ $header-font-family : $sans-serif-narrow;
 	max-width: 500px;
 }
 
+.responsiveGCal {
+	position: relative;
+	height: 0;
+	width: 100%;
+	max-width: 600px;
+	padding-bottom: 75%;
+	overflow: hidden;
+}
+ 
+.responsiveGCal iframe {
+	position: absolute;
+	top:0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
