--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -58,9 +58,10 @@ $header-font-family : $sans-serif-narrow;
 	position: relative;
 	height: 0;
 	width: 100%;
-	max-width: 600px;
 	padding-bottom: 75%;
 	overflow: hidden;
+	max-width: 600px;
+	max-height: 500px;
 }
  
 .responsiveGCal iframe {
